fix for terminal spacing and lines

--- a/inginious/frontend/common/static/css/task_feedback/default-theme.css
+++ b/inginious/frontend/common/static/css/task_feedback/default-theme.css
@@ -1,6 +1,7 @@
 .commentable-container {
   -webkit-transition: all 0.22s ease;
   transition: all 0.22s ease;
+  padding: 15px;
 }
 
 /*.side-comments-open {
