--- a/inginious/frontend/common/static/css/task_feedback/side-comments.css
+++ b/inginious/frontend/common/static/css/task_feedback/side-comments.css
@@ -16,7 +16,6 @@
 }
 .commentable-section {
   position: relative;
-  padding: 15px;
 }
 .commentable-section:hover .side-comment .marker {
   display: block;
